--- a/app/src/main/res/drawable/top_losers_bg.xml
+++ b/app/src/main/res/drawable/top_losers_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="-135"
-        android:startColor="@color/purple"
+        android:startColor="@color/green"
         android:endColor="@color/royal_blue_dark" />
 
     <corners
