--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="royal_blue_dark">#9FC1DC</color>
+    <color name="red">#f4511e</color>
+    <color name="green">#9e9e9e</color>
+
 </resources>
