--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment2"
         android:name="com.example.cryptoappapi.fragment.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment2_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/marketFragment2"
         android:name="com.example.cryptoappapi.fragment.MarketFragment"
@@ -20,4 +24,14 @@
         android:name="com.example.cryptoappapi.fragment.WatchListFragment"
         android:label="fragment_watch_list"
         tools:layout="@layout/fragment_watch_list" />
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.example.cryptoappapi.fragment.DetailsFragment"
+        android:label="DetailsFragment" >
+        <argument
+            android:name="data"
+            app:argType="com.example.cryptoappapi.models.CryptoCurrency"
+            android:defaultValue="@null"
+            app:nullable="true" />
+    </fragment>
 </navigation>
